<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_gallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="android.support.v7.widget.GridLayoutManager"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:spanCount="@integer/gallery_span_count"
    tools:showIn="@layout/activity_main" />
